Add findCategory custom DB query
